<resources>
    <string name="app_name">WeatherApp</string>
    <string name="weathericon">weatherIcon</string>
    <string name="forecastButtonDescription">Prognoza pogody</string>
    <string name="searchButtonDescription">Wyszukaj miejscowość</string>
    <string name="settingsButtonDescription">Ustawienia</string>
    <string name="longitude">Longitude</string>
    <string name="refresh">refresh-data</string>
    <string name="latitude">Latitude</string>
    <string name="pressure">Pressure</string>
    <string name="rain">Rain</string>
    <string name="visibility">Visibility</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind speed</string>
    <string name="wind_direction">Wind direction</string>
    <string name="Info_label">Informacje:</string>
    <string name="forecast_label">Prognoza:</string>
    <string name="settingsLabel">Settings</string>
    <string name="select_unit_label">Select Unit:</string>
    <string name="empty_data">No Data to show</string>
    <string name="input_city_name_placeholder">Input city name...</string>
    <string name="find_city_label">Find city:</string>
    <string name="favourite">favourite</string>
    <string name="favourite_label">Favourite:</string>
    <string name="actual_city_label">Actual City:</string>
    <string name="find_city">Find City</string>
    <string name="connection_error">No internet connection, the data may be incorrect!</string>
    <string-array name="units_array">
        <item>Standard</item>
        <item>Imperial</item>
        <item>Metric</item>
    </string-array>
</resources>