<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/findCityLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/find_city_label"
            android:textColor="@color/textColorItems"
            android:textSize="25sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/findCity"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_background"
                android:elevation="2dp"
                android:hint="@string/input_city_name_placeholder"
                android:inputType="text"
                android:padding="10dp"
                android:paddingEnd="50dp"
                android:textColor="@color/textColorItems"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <ImageButton
                android:id="@+id/findCityButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@color/transparent"
                android:contentDescription="@string/find_city"
                android:elevation="3dp"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/search" />
        </RelativeLayout>

        <HorizontalScrollView
            android:id="@+id/findCityScrollView"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/foundCities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </HorizontalScrollView>

        <TextView
            android:id="@+id/activeCityLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/actual_city_label"
            android:textColor="@color/textColorItems"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/actualCity"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/favouriteLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/favourite_label"
            android:textColor="@color/textColorItems"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/favourite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:orientation="vertical" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
